--- a/sass/bootstrap/_variables.scss
+++ b/sass/bootstrap/_variables.scss
@@ -312,6 +312,13 @@ $screen-sm-max:              ($screen-md-min - 1) !default;
 $screen-md-max:              ($screen-lg-min - 1) !default;
 
 
+// Custom Screen Sizes
+$screen-xl:                  1800px !default;
+$screen-xl-min:              $screen-xl !default;
+$screen-lg-max:              ($screen-lg-min - 1) !default;
+$container-xl:               1740px !default;
+
+
 //== Grid system
 //
 //## Define your custom responsive grid.
