--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -2059,8 +2059,14 @@ pre code {
     width: 1170px;
   }
 }
+@media (min-width: 1800px) {
+  /* line 10, ../sass/bootstrap/_grid.scss */
+  .container {
+    width: 1740px;
+  }
+}
 
-/* line 30, ../sass/bootstrap/_grid.scss */
+/* line 33, ../sass/bootstrap/_grid.scss */
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
@@ -2077,7 +2083,7 @@ pre code {
   clear: both;
 }
 
-/* line 39, ../sass/bootstrap/_grid.scss */
+/* line 42, ../sass/bootstrap/_grid.scss */
 .row {
   margin-left: -15px;
   margin-right: -15px;
@@ -3140,6 +3146,267 @@ pre code {
 
   /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
   .col-lg-offset-12 {
+    margin-left: 100%;
+  }
+}
+@media (min-width: 1800px) {
+  /* line 27, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+    float: left;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-1 {
+    width: 8.33333%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-2 {
+    width: 16.66667%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-3 {
+    width: 25%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-4 {
+    width: 33.33333%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-5 {
+    width: 41.66667%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-6 {
+    width: 50%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-7 {
+    width: 58.33333%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-8 {
+    width: 66.66667%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-9 {
+    width: 75%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-10 {
+    width: 83.33333%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-11 {
+    width: 91.66667%;
+  }
+
+  /* line 35, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-12 {
+    width: 100%;
+  }
+
+  /* line 55, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-0 {
+    right: auto;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-1 {
+    right: 8.33333%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-2 {
+    right: 16.66667%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-3 {
+    right: 25%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-4 {
+    right: 33.33333%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-5 {
+    right: 41.66667%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-6 {
+    right: 50%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-7 {
+    right: 58.33333%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-8 {
+    right: 66.66667%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-9 {
+    right: 75%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-10 {
+    right: 83.33333%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-11 {
+    right: 91.66667%;
+  }
+
+  /* line 50, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-pull-12 {
+    right: 100%;
+  }
+
+  /* line 45, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-0 {
+    left: auto;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-1 {
+    left: 8.33333%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-2 {
+    left: 16.66667%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-3 {
+    left: 25%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-4 {
+    left: 33.33333%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-5 {
+    left: 41.66667%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-6 {
+    left: 50%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-7 {
+    left: 58.33333%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-8 {
+    left: 66.66667%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-9 {
+    left: 75%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-10 {
+    left: 83.33333%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-11 {
+    left: 91.66667%;
+  }
+
+  /* line 40, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-push-12 {
+    left: 100%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-0 {
+    margin-left: 0%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-1 {
+    margin-left: 8.33333%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-2 {
+    margin-left: 16.66667%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-3 {
+    margin-left: 25%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-4 {
+    margin-left: 33.33333%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-5 {
+    margin-left: 41.66667%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-6 {
+    margin-left: 50%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-7 {
+    margin-left: 58.33333%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-8 {
+    margin-left: 66.66667%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-9 {
+    margin-left: 75%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-10 {
+    margin-left: 83.33333%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-11 {
+    margin-left: 91.66667%;
+  }
+
+  /* line 60, ../sass/bootstrap/mixins/_grid-framework.scss */
+  .col-xl-offset-12 {
     margin-left: 100%;
   }
 }
